--- a/index.html
+++ b/index.html
@@ -3,12 +3,55 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/minty/bootstrap.min.css" integrity="sha384-H4X+4tKc7b8s4GoMrylmy2ssQYpDHoqzPa9aKXbDwPoPUA3Ra8PA5dGzijN+ePnH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
         <title>Pierre/Feuille/Ciseaux</title>
     </head>
 
     <body>
-        
+        <div class="container">
+            <div class="jumbotron text-center">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="display-3"><i class="far fa-hand-scissors"></i></h1>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-3"><i class="far fa-hand-rock"></i></h1>
+                    </div>
+                    <div class="col">
+                        <h1 class="display-3"><i class="far fa-hand-paper"></i></h1>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row text-center mb-4">
+                <div class="col">
+                    <h3 id="winner"></h3>
+                </div>
+            </div>
+
+            <div class="round">
+                <table class="table table-hover">
+                    <thead>
+                        <tr class="table-info text-center">
+                            <th scope="col">Player 1</th>
+                            <th scope="col">Round</th>
+                            <th scope="col">Player 2</th>
+                        </tr>
+                    </thead>
+                    <tbody id="rounds">
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
         <script src="js/Class/Player.js"></script>
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </body>
 </html>
