--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             <div class="jumbotron text-center">
                 <div class="row">
                     <div class="col">
-                        <h1 class="display-3"><i class="far fa-hand-scissors"></i></h1>
+                        <h1 class="display-3 hand"><i class="far fa-hand-scissors"></i></h1>
                     </div>
                     <div class="col">
-                        <h1 class="display-3"><i class="far fa-hand-rock"></i></h1>
+                        <h1 class="display-3 hand"><i class="far fa-hand-rock"></i></h1>
                     </div>
                     <div class="col">
-                        <h1 class="display-3"><i class="far fa-hand-paper"></i></h1>
+                        <h1 class="display-3 hand"><i class="far fa-hand-paper"></i></h1>
                     </div>
                 </div>
             </div>
